feat: implemented leader board and updated submission logic